--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@salesforce-ux/design-system": "^2.9.3",
+    "@salesforce/design-system-react": "^0.10.4",
     "babel-loader": "^8.0.6",
     "luxon": "^1.16.0",
     "react": "^16.8.6",
