--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@salesforce-ux/design-system": "^2.9.3",
     "@salesforce/design-system-react": "^0.10.4",
     "babel-loader": "^8.0.6",
+    "lodash": "^4.17.14",
     "luxon": "^1.16.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
